First commited as before_57345_rev2