@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2014 IBM Corporation and others.
+ * Copyright (c) 2000, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -13,6 +13,7 @@
  *     - Fix for bug 208602 - [Dialogs] Open Type dialog needs accessible labels
  *  Simon Muschel <smuschel@gmx.de> - bug 258493
  *  Lars Vogel <Lars.Vogel@gmail.com> - Bug 440810
+ *  Patrik Suzzi <psuzzi@gmail.com> - Bug 485133
  *******************************************************************************/
 package org.eclipse.ui.dialogs;
 
@@ -132,8 +133,7 @@ import org.eclipse.ui.statushandlers.StatusManager;
  *
  * @since 3.3
  */
-public abstract class FilteredItemsSelectionDialog extends
-		SelectionStatusDialog {
+public abstract class FilteredItemsSelectionDialog extends SelectionStatusDialog {
 
 	private static final String DIALOG_BOUNDS_SETTINGS = "DialogBoundsSettings"; //$NON-NLS-1$
 
@@ -592,7 +592,7 @@ public abstract class FilteredItemsSelectionDialog extends
      * @since 3.5
      */
 	protected void fillContextMenu(IMenuManager menuManager) {
-		List selectedElements= ((StructuredSelection)list.getSelection()).toList();
+		List selectedElements = list.getStructuredSelection().toList();
 
 		Object item= null;
 
@@ -789,7 +789,9 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		details = new DetailsContentViewer(content, SWT.BORDER | SWT.FLAT);
 		details.setVisible(toggleStatusLineAction.isChecked());
-		details.setContentProvider(new NullContentProvider());
+		details.setContentProvider(new IContentProvider() {
+			// intentionally empty
+		});
 		details.setLabelProvider(getDetailsLabelProvider());
 
 		applyDialogFont(content);
@@ -846,7 +848,7 @@ public abstract class FilteredItemsSelectionDialog extends
 					.setInput(NLS
 							.bind(
 									WorkbenchMessages.FilteredItemsSelectionDialog_nItemsSelected,
-									new Integer(selection.size())));
+									Integer.valueOf(selection.size())));
 			break;
 		}
 
@@ -1541,7 +1543,7 @@ public abstract class FilteredItemsSelectionDialog extends
 		private ILabelDecorator selectionDecorator;
 
 		// Need to keep our own list of listeners
-		private ListenerList listeners = new ListenerList();
+		private ListenerList<ILabelProviderListener> listeners = new ListenerList<>();
 
 		/**
 		 * Creates a new instance of the class.
@@ -1784,9 +1786,8 @@ public abstract class FilteredItemsSelectionDialog extends
 
 		@Override
 		public void labelProviderChanged(LabelProviderChangedEvent event) {
-			Object[] l = listeners.getListeners();
-			for (int i = 0; i < listeners.size(); i++) {
-				((ILabelProviderListener) l[i]).labelProviderChanged(event);
+			for (ILabelProviderListener l : listeners) {
+				l.labelProviderChanged(event);
 			}
 		}
 	}
@@ -1925,8 +1926,7 @@ public abstract class FilteredItemsSelectionDialog extends
 							WorkbenchMessages.FilteredItemsSelectionDialog_taskProgressMessage,
 							new Object[] {
 									message,
-									new Integer(
-											(int) ((worked * 100) / totalWork)) });
+									Integer.valueOf((int) ((worked * 100) / totalWork)) });
 
 		}
 
@@ -2095,7 +2095,7 @@ public abstract class FilteredItemsSelectionDialog extends
 									WorkbenchMessages.FilteredItemsSelectionDialog_searchJob_taskName,
 									100);
 
-				fillContentProvider(contentProvider, itemsFilter, subMonitor.newChild(95));
+				fillContentProvider(contentProvider, itemsFilter, subMonitor.split(95));
 
 				if (monitor != null && !monitor.isCanceled()) {
 					subMonitor.worked(2);
@@ -2821,14 +2821,14 @@ public abstract class FilteredItemsSelectionDialog extends
 
 			// the TableViewer's root (the input) is treated as parent
 
-			lastFilteredItems = Arrays.asList(getFilteredItems(list.getInput(), subMonitor.newChild(100)));
+			lastFilteredItems = Arrays.asList(getFilteredItems(list.getInput(), subMonitor.split(100)));
 
 			if (reset || subMonitor.isCanceled()) {
 				return;
 			}
 
 			if (checkDuplicates) {
-				checkDuplicates(subMonitor.newChild(100));
+				checkDuplicates(subMonitor.split(100));
 			}
 		}
 
@@ -2954,21 +2954,6 @@ public abstract class FilteredItemsSelectionDialog extends
 			// currently filters are only added when dialog is restored
 			// if it is changed, refreshing the whole TableViewer should be
 			// added
-		}
-
-	}
-
-	/**
-	 * A content provider that does nothing.
-	 */
-	private class NullContentProvider implements IContentProvider {
-
-		@Override
-		public void dispose() {
-		}
-
-		@Override
-		public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
 		}
 
 	}
